fix errors with layout on small display and delete scrolling on big display

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,10 @@
   #root {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 2rem;
     text-align: center;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
 
 
@@ -44,6 +46,7 @@
       transform: rotate(360deg);
     }
   }
+
 
   @media (prefers-reduced-motion: no-preference) {
     a:nth-of-type(2) .logo {
